# StartingPoint

./: .gitleaks.toml  .pre-commit-config.yaml  .secrets.baseline  README.md  new-project.sh
.github/workflows/: ci.yml
cpp-template/: .clang-format  .clang-tidy  .gitignore  .pre-commit-config.yaml  .secrets.baseline  CLAUDE.md  CMakeLists.txt  README.md
cpp-template/.github/workflows/: ci.yml
cpp-template/src/: main.cpp
csharp-template/: .editorconfig  .gitignore  .gitleaks.toml  .pre-commit-config.yaml  .secrets.baseline  CLAUDE.md  PROJECT_NAME.sln  README.md
csharp-template/.github/workflows/: ci.yml
csharp-template/src/: PROJECT_NAME.csproj  Program.cs
python-template/: .gitignore  .pre-commit-config.yaml  .secrets.baseline  CLAUDE.md  README.md  pyproject.toml
python-template/.github/workflows/: ci.yml
python-template/src/: main.py
python-template/tests/: test_secrets.py
